# TS-DRF-Vendas

./: README.md  pyproject.toml
source/: settings.py  urls.py
vendas/: models.py  urls.py
vendas/api/: serializers.py  viewsets.py
vendas/migrations/: 0001_initial.py
vendas/templates/: base.html  home.html  home_cat.html
